2011-06-24  Vsevolod Vlasov  <vsevik@chromium.org>

Reviewed by Darin Fisher.

        Web Inspector: [Chromium] Successfully prefetched page shows up as an error in console
        https://bugs.webkit.org/show_bug.cgi?id=62396

        * public/WebURLError.h:
        (WebKit::WebURLError::WebURLError):
        * src/WebURLError.cpp:
        (WebKit::WebURLError::operator=):
        (WebKit::WebURLError::operator ResourceError):

Canonical link: https://commits.webkit.org/78963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89658 268f45cc-cd09-0410-ab3c-d52691b4dbfc